--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/plugins.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
+    <script src="app.js"></script>
 
 </body>
 
