--- a/index.html
+++ b/index.html
@@ -312,6 +312,32 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/active.js"></script>
     <script src="app.js"></script>
 
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyB3C2qRSCQTnELesRYOcbff26-xo34CR6s",
+          authDomain: "luxury-bags-28430.firebaseapp.com",
+          projectId: "luxury-bags-28430",
+          storageBucket: "luxury-bags-28430.appspot.com",
+          messagingSenderId: "480913329732",
+          appId: "1:480913329732:web:ce535bff3dc61395ec3611",
+          measurementId: "G-KE70VY7VDL"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const db = firebase.firestore();
+        db.settings({ timestampsInSnapshots: true});
+      </script>
+
 </body>
 
 </html>
